data/derived/sp14/progs/unify/prog1568.ml.out
Characters 94-129:
  ((clone 0 (len1-len2)) @ len2),len1;;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
